force-app/main/default/objects/Bank_Statement__c/Bank_Statement__c.object-meta.xml
<CustomObject>
    <label>Bank Statement</label>
    <nameField>
        <label>Bank Statement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Statements</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>