force-app/main/default/objects/Bank_Statement__c/fields/AllocAmount__c.field-meta.xml
<CustomField>
    <fullName>AllocAmount__c</fullName>
    <label>AllocAmount</label>
    <summarizedField>PaymentAllocation__c.AllocatedAmount__c</summarizedField>
    <summaryForeignKey>PaymentAllocation__c.BankstatementId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>