force-app/main/default/objects/Bank_Statement__c/fields/AllocatedAmount__c.field-meta.xml
<CustomField>
    <fullName>AllocatedAmount__c</fullName>
    <label>AllocatedAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>