force-app/main/default/objects/Bank_Statement__c/fields/BankAccNo__c.field-meta.xml
<CustomField>
    <fullName>BankAccNo__c</fullName>
    <formula>if( !(ISPICKVAL(Transaction_Type__c , &quot;Credit Card&quot;)), mid(Transaction_Details__c,FIND(&quot;From: &quot;,Transaction_Details__c)+len(&quot;From: &quot;)+9,8),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BankAccNo</label>
    <type>Text</type>
</CustomField>