force-app/main/default/objects/Bank_Statement__c/fields/BusinessCentralLastSentDate__c.field-meta.xml
<CustomField>
    <fullName>BusinessCentralLastSentDate__c</fullName>
    <label>Business Central Last Sent Date</label>
    <type>DateTime</type>
</CustomField>