force-app/main/default/objects/Bank_Statement__c/fields/CP_Transactional_Info__c.field-meta.xml
<CustomField>
    <fullName>CP_Transactional_Info__c</fullName>
    <label>CP_Transactional_Info</label>
    <type>TextArea</type>
</CustomField>