force-app/main/default/objects/Bank_Statement__c/fields/Credit_Note_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Note Invoice</label>
    <referenceTo>Invoice_Header__c</referenceTo>
    <relationshipLabel>Bank Statements</relationshipLabel>
    <relationshipName>Bank_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>