force-app/main/default/objects/Bank_Statement__c/fields/Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference__c</fullName>
    <description>This field indicates the Customer reference details, kept as text</description>
    <label>Customer Reference</label>
    <type>TextArea</type>
</CustomField>