force-app/main/default/objects/Bank_Statement__c/fields/DDCode__c.field-meta.xml
<CustomField>
    <fullName>DDCode__c</fullName>
    <formula>&apos;17&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DDCode</label>
    <type>Text</type>
</CustomField>