force-app/main/default/objects/Bank_Statement__c/fields/Document_name__c.field-meta.xml
<CustomField>
    <fullName>Document_name__c</fullName>
    <description>This field will hold the original document name as a text, this will help to distinct information from different days</description>
    <label>Document Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>