force-app/main/default/objects/Bank_Statement__c/fields/EnqixId__c.field-meta.xml
<CustomField>
    <fullName>EnqixId__c</fullName>
    <formula>Account__r.Enqix_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EnqixId</label>
    <type>Text</type>
</CustomField>