force-app/main/default/objects/Bank_Statement__c/fields/Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Entry_Date__c</fullName>
    <description>This is the entry date field, stored as a Date, for the Bank Statement</description>
    <label>Entry Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>