force-app/main/default/objects/Bank_Statement__c/fields/FMCP_ID__c.field-meta.xml
<CustomField>
    <fullName>FMCP_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Bank Statement ID from FMCP system</description>
    <label>FMCP ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>