force-app/main/default/objects/Bank_Statement__c/fields/fromCustomerPortal__c.field-meta.xml
<CustomField>
    <fullName>fromCustomerPortal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>fromCustomerPortal</label>
    <type>Checkbox</type>
</CustomField>