force-app/main/default/objects/Bank_Statement__c/fields/Ledger_Balance__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Balance__c</fullName>
    <description>This field indicates the Ledger Balance, kept as number</description>
    <label>Ledger Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>