force-app/main/default/objects/Bank_Statement__c/fields/MarkedForSage__c.field-meta.xml
<CustomField>
    <fullName>MarkedForSage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked For Sage</label>
    <type>Checkbox</type>
</CustomField>