force-app/main/default/objects/Bank_Statement__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Bank Statements</relationshipLabel>
    <relationshipName>Bank_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>