force-app/main/default/objects/Bank_Statement__c/fields/OutstandingAmount__c.field-meta.xml
<CustomField>
    <fullName>OutstandingAmount__c</fullName>
    <formula>Account__r.Amount_Outstanding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OutstandingAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>