force-app/main/default/objects/Bank_Statement__c/fields/Sage_Extract_Created__c.field-meta.xml
<CustomField>
    <fullName>Sage_Extract_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sage Extract Created</label>
    <type>Checkbox</type>
</CustomField>