force-app/main/default/objects/Bank_Statement__c/fields/Sent_DD_Remittance_Email__c.field-meta.xml
<CustomField>
    <fullName>Sent_DD_Remittance_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies if Direct Debit email remittance was sent or not. Useful to pick up Bank Statements for Direct Debit email remittance process.</description>
    <label>Sent DD Remittance Email</label>
    <type>Checkbox</type>
</CustomField>