force-app/main/default/objects/Bank_Statement__c/fields/Transaction_Details__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Details__c</fullName>
    <description>These are the transaction details, kept as text</description>
    <label>Transaction Details</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>