force-app/main/default/objects/Bank_Statement__c/fields/TransactionAmount__c.field-meta.xml
<CustomField>
    <fullName>TransactionAmount__c</fullName>
    <formula>Receipt_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TransactionAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>