force-app/main/default/objects/Bank_Statement__c/fields/Unallocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unallocated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>