force-app/main/default/objects/Bank_Statement__c/fields/Unallocated_Updated__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unallocated Updated?</label>
    <type>Checkbox</type>
</CustomField>