force-app/main/default/objects/Bank_Statement__c/recordTypes/Bank_Statement.recordType-meta.xml
<RecordType>
    <fullName>Bank_Statement</fullName>
    <active>true</active>
    <label>Bank Statement</label>
</RecordType>