force-app/main/default/objects/Bank_Statement__c/validationRules/Length8.validationRule-meta.xml
<ValidationRule>
    <fullName>Length8</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LEN(Bank_Account_Number__c) &lt;&gt; 8, NOT(ISBLANK(Bank_Account_Number__c )))</errorConditionFormula>
    <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
    <errorMessage>Account Number needs to have a length of 8 characters.</errorMessage>
</ValidationRule>