force-app/main/default/objects/Bank_Statement__c/validationRules/RestrictCurrency.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictCurrency</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(CurrencyIsoCode)</errorConditionFormula>
    <errorMessage>Currency cannot be changed.</errorMessage>
</ValidationRule>