force-app/main/default/objects/Bank_Statement__c/listViews/Bank_Rec.listView-meta.xml
<ListView>
    <fullName>Bank_Rec</fullName>
    <columns>NAME</columns>
    <columns>Entry_Date__c</columns>
    <columns>Transaction_Details__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Receipt_Amount__c</columns>
    <columns>Document_name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Document_name__c</field>
        <operation>notEqual</operation>
        <value>Loaded from Enqix</value>
    </filters>
    <filters>
        <field>Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Bank Giro Credit,Inward Payment via FP,Direct Debit,Transfer</value>
    </filters>
    <filters>
        <field>Entry_Date__c</field>
        <operation>equals</operation>
        <value>5/1/2019</value>
    </filters>
    <label>Bank Rec</label>
</ListView>