force-app/main/default/objects/Bank_Statement__c/listViews/Card_Payments_to_Allocate.listView-meta.xml
<ListView>
    <fullName>Card_Payments_to_Allocate</fullName>
    <columns>NAME</columns>
    <columns>Unallocated_Amount__c</columns>
    <columns>Account__c</columns>
    <columns>Customer_Reference__c</columns>
    <columns>Entry_Date__c</columns>
    <columns>Transaction_Details__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Receipt_Amount__c</field>
        <operation>equals</operation>
        <value>59</value>
    </filters>
    <label>Card Payments to Allocate</label>
</ListView>