force-app/main/default/objects/Bank_Statement__c/listViews/Direct_Debit_Payments.listView-meta.xml
<ListView>
    <fullName>Direct_Debit_Payments</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Entry_Date__c</columns>
    <columns>Account__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Receipt_Amount__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Document_name__c</columns>
    <columns>TransactionAmount__c</columns>
    <columns>Unallocated_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Direct Debit</value>
    </filters>
    <filters>
        <field>TransactionAmount__c</field>
        <operation>equals</operation>
        <value>GBP 692.4</value>
    </filters>
    <label>Direct Debit Payments</label>
</ListView>