force-app/main/default/objects/Bank_Statement__c/listViews/Payments_Posted_TODAY.listView-meta.xml
<ListView>
    <fullName>Payments_Posted_TODAY</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Entry_Date__c</columns>
    <columns>Transaction_Details__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Receipt_Amount__c</columns>
    <columns>TransactionAmount__c</columns>
    <columns>Unallocated_Amount__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>CP_Transactional_Info__c</columns>
    <columns>Customer_Reference__c</columns>
    <columns>Document_name__c</columns>
    <columns>fromCustomerPortal__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Payments Posted YESTERDAY</label>
</ListView>