force-app/main/default/objects/Bank_Statement__c/listViews/Portal_Balance_Payments.listView-meta.xml
<ListView>
    <fullName>Portal_Balance_Payments</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Entry_Date__c</columns>
    <columns>Account__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Receipt_Amount__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>TransactionAmount__c</columns>
    <columns>Unallocated_Amount__c</columns>
    <columns>Document_name__c</columns>
    <columns>CP_Transactional_Info__c</columns>
    <columns>Customer_Reference__c</columns>
    <columns>Transaction_Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AllocAmount__c</field>
        <operation>equals</operation>
        <value>1282.8</value>
    </filters>
    <label>Portal Balance &amp; Invoice Payments</label>
</ListView>