force-app/main/default/objects/Bank_Statement__c/listViews/Search_by_date.listView-meta.xml
<ListView>
    <fullName>Search_by_date</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>TransactionAmount__c</columns>
    <columns>Unallocated_Amount__c</columns>
    <columns>OutstandingAmount__c</columns>
    <columns>Account__c</columns>
    <columns>Transaction_Details__c</columns>
    <columns>Document_name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Receipt_Amount__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TransactionAmount__c</field>
        <operation>equals</operation>
        <value>GBP 2498.34</value>
    </filters>
    <label>By Date</label>
</ListView>