force-app/main/default/objects/Bank_Statement__c/listViews/Unallocated_Cash_no_account_identified.listView-meta.xml
<ListView>
    <fullName>Unallocated_Cash_no_account_identified</fullName>
    <columns>NAME</columns>
    <columns>Receipt_Amount__c</columns>
    <columns>Unallocated_Amount__c</columns>
    <columns>OutstandingAmount__c</columns>
    <columns>Transaction_Details__c</columns>
    <columns>Account__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Bank Giro Credit,Inward Payment via FP,Credit Card,Direct Debit,Transfer</value>
    </filters>
    <filters>
        <field>Unallocated_Amount__c</field>
        <operation>greaterThan</operation>
        <value>GBP 1,GBP 851.6</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
    </filters>
    <label>Unallocated Cash - no account identified</label>
</ListView>