force-app/main/default/objects/Bank_Statement__c/listViews/Unallocated_Portal_Order_Payments.listView-meta.xml
<ListView>
    <fullName>Unallocated_Portal_Order_Payments</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Entry_Date__c</columns>
    <columns>Account__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Receipt_Amount__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>TransactionAmount__c</columns>
    <columns>Unallocated_Amount__c</columns>
    <columns>CP_Transactional_Info__c</columns>
    <columns>Customer_Reference__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transaction_Type__c</field>
        <operation>startsWith</operation>
        <value>Credit Card</value>
    </filters>
    <filters>
        <field>Unallocated_Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Order__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Unallocated Portal Order Payments</label>
</ListView>